Add resume content

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <div class="header">
             <div class="header-left">
                 <div class="name">
-                    <h1 class="First-Name">Nitish</h1>
+                    <h1 style="color:#000008" class="First-Name">Nitish</h1>
                     <h1 class="Last-Name">Kota</h1>
                 </div>
             </div>
             <div class="header-right">
                 <div class="email">
                     <p>nitishkota123@gmail.com</p>
-                    <i class="fa-regular fa-envelope"></i>
+                    <i style="color:crimson" class="fa-regular fa-envelope"></i>
                 </div>
                 <div class="linkedin">
                     <p>www.linkedin.com/in/nitishkota</p>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i style="color:blue" class="fa-brands fa-linkedin"></i>
                 </div>
                 <div class="github">
                     <p>https://github.com/Nitishkota</p>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="phone">
                     <p>+1 (505)5506322</p>
-                    <i class="fa-solid fa-phone"></i>
+                    <i style="color:cadetblue" class="fa-solid fa-phone"></i>
                 </div>
             </div>
 
@@ -48,18 +48,17 @@
         <div class="objective">
             <div class="obj-head">
                 <i class="fa-duotone fa-bullseye"></i>
-                <h2>Objective</h2>
+                <h2 style="color:tomato">Objective</h2>
             </div>
-            <p>Willing to work as a developer and seeking to develop a AI machine.Started as a Computer Science student and developed various skills. Exceptional in handling problems and finding solutions.
-                Good at Data Structures & Algorithms and good at programming languages such as C, C++,java,HTML,CSS etc. Good
-                at communication skills and can understand 4 different languages. Especially good at all sorting algorithms such as Heap
+            <p>Seeking to work as a developer and seeking to develop a AI machine.Highly motivated computer science student with experience in various programming
+                languages such as Python, Java, and C++. Especially good at all sorting algorithms such as Heap
                 Sort, Merge Sort, Quick Sort, Line Intersection Algorithm etc.And also worked on graph algorithms and greedy algorithms. I
                 have done projects on Data mining using ML and published a research paper on Lethargy Detection during work using Keras
                 Deep learning. Worked on AWS cloud services during my undergrad as a course. And made some students to choose their
                 path towards cloud services. And done my project on 'A HYBRID OPTIMIZATION METHOD FOR OBSTACLE AVOIDANCE
                 AND TRACKING CONTROL'.
                 
-                <p>Keenly intelligent, well-organized, and an effective communicator</p>
+                <p style="color: black;">Keenly intelligent, well-organized, and an effective communicator</p>
                 
                 <p>Passionate about deep reinforcement learning</p>
 
@@ -80,8 +79,8 @@
         <hr>
         <div class="education">
             <div class="ed-header">
-                <i class="fa-sharp fa-solid fa-school"></i>
-                <h2>Education</h2>
+                <i style="color: rgb(218, 126, 6);"class="fa-sharp fa-solid fa-school"></i>
+                <h2 style="color:blueviolet;">Education</h2>
 
             </div>
             <table>
@@ -114,8 +113,8 @@
         <hr>
         <div class="Skills">
             <div class="Skill-head">
-                <i class="fa-sharp fa-solid fa-database"></i>
-                <h2>Skills</h2>
+                <i style="color:blue" class="fa-sharp fa-solid fa-database"></i>
+                <h2 style="color:blueviolet">Skills</h2>
             </div>
             <ul>
                 <li>
@@ -130,11 +129,11 @@
         <hr>
         <div class="achievements">
             <div class="ach-head">
-                <i class="fa-solid fa-star"></i>
-                <h2>Achievements</h2>
+                <i style="color:goldenrod" class="fa-solid fa-star"></i>
+                <h2 style="color:blueviolet">Achievements</h2>
             </div>
             <p>Publication on Lethargy Detection during work using Keras Deep Learning</p>
-            <p>https://ieeexplore.ieee.org/document/9785330</p>
+            <p style="color:blue">https://ieeexplore.ieee.org/document/9785330</p>
             <p>Workshop in Robotics and IOT</p>
             <p>Internship on Internet of Things and Machine Learning using Python</p></p>
         </div>    
