Add resume content

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <div class="objective">
             <div class="obj-head">
                 <i class="fa-duotone fa-bullseye"></i>
-                <h2 style="color:tomato">Objective</h2>
+                <h2 style="color:tomato">About</h2>
             </div>
-            <p>Seeking to work as a developer and seeking to develop a AI machine.Highly motivated computer science student with experience in various programming
+            <p>Seeking to work as a developer.Highly motivated computer science student with experience in various programming
                 languages such as Python, Java, and C++. Especially good at all sorting algorithms such as Heap
                 Sort, Merge Sort, Quick Sort, Line Intersection Algorithm etc.And also worked on graph algorithms and greedy algorithms. I
                 have done projects on Data mining using ML and published a research paper on Lethargy Detection during work using Keras
