--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="header-right">
                 <div class="email">
-                    <p>nitishkota123@gmail.com(https://nitishkota.github.io/(- My portfolio))</p>
+                    <p>nitishkota123@gmail.com(https://nitishkota.github.io/ - My portfolio Website)</p>
                     <i style="color:crimson" class="fa-regular fa-envelope"></i>
                 </div>
                 <div class="linkedin">
