--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       About
                     </h1>
                     <p>
-                      As a Computer Science student, I have developed a wide range of skills and I am currently seeking a role as a developer to work on developing AI machines. I excel in problem-solving and have a strong ability to find solutions. My proficiency in Data Structures & Algorithms and programming languages such as C, C++, Java, HTML, CSS, etc. is exceptional.  
+                      As a Computer Science student, I have developed a wide range of skills and I am currently seeking a role as a developer to work on developing AI machines. I excel in problem-solving and have a strong ability to find solutions. My proficiency in Data Structures & Algorithms and programming languages such as C, C++, Python, HTML, CSS, etc. is exceptional.  
                     </p>
                     <div>
                       <a href="">
@@ -150,7 +150,6 @@
                       Research paper on Lethargy Detection during work using Keras Deep learning.
                       I gained hands-on experience in AWS cloud services as part of a course projects.
                       A Hybrid Optimization Method For Obstacle Avoidance And Tracking Control.
-
                     </p>
                     <div>
                       <a href="">
